--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   
   <section class="photo">
-    <img src="mifoto.jpg" alt="Mi foto">
+    <img src="a.jpg" alt="Mi foto">
   </section>
   
   <section class="section">
