--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Omar Palomares Velasco - CV</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="website icon" type="jpeg" href="portfolio-icon.png">
+
   <script src="script.js"></script>
 </head>
 <body>
@@ -88,7 +90,6 @@
       <li>Análisis de datos</li>
       <li>Diseño de interfaces de usuario (UI)</li>
       <li>Gestión de proyectos ágil</li>
-      <li>Español</li>
     </ul>
   </section>
 
