--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <ul>
         <li><strong>Correo electrónico:</strong> <a href="mailto:palomaresomar691@gmail.com">palomaresomar691@gmail.com</a></li>
         <li><strong>Teléfono:</strong> <a href="tel:+5586024170">+5586024170</a></li>
-        <li><strong>Dirección:</strong> Ciudad: Ciudad De Mexico, País: Mexico</li>
+        <li><strong>Dirección:</strong> Estado De Mexico, País: Mexico</li>
       </ul>           
   </section>
   
