--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><strong>Nombre:</strong> Omar Palomares Velasco</li>
       <li><strong>Edad:</strong> 16 años</li>
       <li><strong>Profesión:</strong> Desarrollador de Software</li>
-      <li><strong>Ubicación:</strong> Ciudad de México, México</li>
+      <li><strong>Ubicación:</strong> Estado de México, México</li>
       <li><strong>Idiomas:</strong> Español (nativo), Inglés (Basico)</li>
       <li><strong>Intereses y Hobbies:</strong> Programación, Lectura, Música, Fotografía, Boxeo</li>
     </ul>           
@@ -37,7 +37,6 @@
     <ul>
         <li><strong>Correo electrónico:</strong> <a href="mailto:palomaresomar691@gmail.com">palomaresomar691@gmail.com</a></li>
         <li><strong>Teléfono:</strong> <a href="tel:+5586024170">+5586024170</a></li>
-        <li><strong>Dirección:</strong> Estado De Mexico, País: Mexico</li>
       </ul>           
   </section>
   
